rgw: fix the bug of rgw not doing necessary checking to website configuration

Fixes: http://tracker.ceph.com/issues/40678

Signed-off-by: Enming Zhang <enming.zhang@umcloud.com>
(cherry picked from commit 355f392ad26631f44dac250296e96f421d86fb8f)

Conflicts:
	src/rgw/rgw_rest_s3.cc
- 3275dffa45ae08d3818562d2d11a8d1c0afa326b is not being backported